--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
@@ -1090,7 +1090,7 @@
 						key="line-69"/>
 					<graphicElement stretchType="NoStretch"/>
 				</line>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="314"
 						y="128"
